[package]
name = "tile"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
bevy-inspector-egui = { version = "0.36.0", features = ["highlight_changes"] }
fastrand = "2.4.1"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
